--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@ ga('send', 'pageview');
 				</p>
 			</td>
 			<td>
-				<img src="./pic/CGP.jpeg" border="0" width="360"><br>
+				<img src="./pic/CGP.jpg" border="0" width="120"><br>
 			</td>
 		</tr><tr>
 	</tr></tbody>
