--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@ ga('send', 'pageview');
 		<td> Asymmetric U-shaped Network with Hybrid Attention Mechanism for Kidney Ultrasound Images Segmentation. <br>
 		<b>Gongping Chen</b>, Yu Zhao, Yu Dai, Jianxun Zhang, Xiaotao Yin, Liang Cui, Jiang Qian. <br>
 		<em>Expert Systems With Applications (<b>ESWA</b>)</em>, 2022.
-		<p>[<a href="https://doi.org/10.1016/j.eswa.2022.118847">paper</a>]
+		<p>[<a href="https://doi.org/10.1016/j.eswa.2022.118847">paper</a>][<a href="https://github.com/CGPxy/Asymmetric-U-net-for-ultrasound-segmentation">code</a>]
 		</td>
 	</tr>
 	<tr>&nbsp</tr>
