--- a/index.html
+++ b/index.html
@@ -70,6 +70,7 @@ ga('send', 'pageview');
 					<!-- <br> -->
 				</p>
 				<p> 
+					<a href="https://scholar.google.com/citations?user=AJsXoWgAAAAJ&hl=zh-CN"><img src="./pic/Google.jpg" height="30px" style="margin-bottom:-3px"></a>
 					<a href="https://github.com/CGPxy"><img src="./pic/github_s.jpg" height="30px" style="margin-bottom:-3px"></a>
 					<a href="https://www.scopus.com/authid/detail.uri?authorId=57211600221"><img src="./pic/rg.png" height="30px" style="margin-bottom:-3px"></a>
 					<a href="https://blog.csdn.net/chen_gong_ping?spm=1000.2115.3001.5343"><img src="./pic/CSDN.jpg" height="30px" style="margin-bottom:-3px"></a>
