--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@ ga('send', 'pageview');
 		</td>		
 		<td> AAU-net: An Adaptive Attention U-net for Breast Lesions Segmentation in Ultrasound Images. <br>
 		<b>Gongping Chen</b>, Yuming Liu, Lei Li, Moi Hoon Yap, Yu Dai, Jianxun Zhang. <br>
-		<em>arXiv (<b>arXiv</b>)</em>, 2022.
+		<em>IEEE Transactions on Medical Imaging.(<b>accepted</b>)</em>, 2022.
 		<p>[<a href="https://doi.org/10.48550/arXiv.2204.12077">paper</a>][<a href="https://github.com/CGPxy/AAU-net">code</a>]
 		</td>
 	</tr>
