--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@ ga('send', 'pageview');
 		<img src="./papers/HAAM.png" width="250px" height="90px" style="box-shadow: 4px 4px 8px #888" class="center">
 		</td>		
 		<td> AAU-net: An Adaptive Attention U-net for Breast Lesions Segmentation in Ultrasound Images. <br>
-		<b>Gongping Chen</b>, Yuming Liu, Lei Li, Moi Hoon Yap, Yu Dai, Jianxun Zhang. <br>
+		<b>Gongping Chen</b>, Lei Li, Yu Dai, Jianxun Zhang, Moi Hoon Yap. <br>
 		<em>IEEE Transactions on Medical Imaging, 2022. (<b>Accepted</b>)</em>.
 		<p>[<a href="https://doi.org/10.48550/arXiv.2204.12077">paper</a>][<a href="https://github.com/CGPxy/AAU-net">code</a>]
 		</td>
