--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@ ga('send', 'pageview');
 		</td>		
 		<td> AAU-net: An Adaptive Attention U-net for Breast Lesions Segmentation in Ultrasound Images. <br>
 		<b>Gongping Chen</b>, Lei Li, Yu Dai, Jianxun Zhang, Moi Hoon Yap. <br>
-		<em>IEEE Transactions on Medical Imaging, 2022. (<b>Accepted</b>)</em>.
+		<em>IEEE Transactions on Medical Imaging, 2023. (<b>Accepted</b>)</em>.
 		<p>[<a href="https://doi.org/10.48550/arXiv.2204.12077">paper</a>][<a href="https://github.com/CGPxy/AAU-net">code</a>]
 		</td>
 	</tr>
@@ -188,7 +188,20 @@ ga('send', 'pageview');
     <tr>&nbsp</tr>
     <tr>&nbsp</tr>
 
-
+	<tr>
+		<td width="270">
+		<img src="./papers/RRCNet1.png" width="250px" height="90px" style="box-shadow: 4px 4px 8px #888" class="center">
+		</td>		
+		<td> RRCNet: Refinement residual convolutional network for breast ultrasound images segmentation. <br>
+		<b>Gongping Chen</b>, Yu Dai, Jianxun Zhang. <br>
+		<em>Engineering Applications of Artificial Intelligence, 2023.</em>.
+		<p>[<a href="https://doi.org/10.1016/j.engappai.2022.105601">paper</a>][<a href="https://github.com/CGPzy/RRCNet">code</a>]
+		</td>
+	</tr>
+	<tr>&nbsp</tr>
+    <tr>&nbsp</tr>
+    <tr>&nbsp</tr>
+		
 	<tr>
 		<td width="270">
 		<img src="./papers/U-netfill.png" width="250px" height="90px" style="box-shadow: 4px 4px 8px #888" class="center">
