--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@ ga('send', 'pageview');
 		</td>		
 		<td> AAU-net: An Adaptive Attention U-net for Breast Lesions Segmentation in Ultrasound Images. <br>
 		<b>Gongping Chen</b>, Lei Li, Yu Dai, Jianxun Zhang, Moi Hoon Yap. <br>
-		<em>IEEE Transactions on Medical Imaging, 2023. (<b>Accepted</b>)</em>.
+		<em>IEEE Transactions on Medical Imaging, 2023</em>.
 		<p>[<a href="https://doi.org/10.48550/arXiv.2204.12077">paper</a>][<a href="https://github.com/CGPxy/AAU-net">code</a>]
 		</td>
 	</tr>
@@ -194,7 +194,7 @@ ga('send', 'pageview');
 		</td>		
 		<td> RRCNet: Refinement residual convolutional network for breast ultrasound images segmentation. <br>
 		<b>Gongping Chen</b>, Yu Dai, Jianxun Zhang. <br>
-		<em>Engineering Applications of Artificial Intelligence, 2023.</em>.
+		<em>Engineering Applications of Artificial Intelligence, 2023</em>.
 		<p>[<a href="https://doi.org/10.1016/j.engappai.2022.105601">paper</a>][<a href="https://github.com/CGPzy/RRCNet">code</a>]
 		</td>
 	</tr>
@@ -208,7 +208,7 @@ ga('send', 'pageview');
 		</td>		
 		<td> Asymmetric U-shaped Network with Hybrid Attention Mechanism for Kidney Ultrasound Images Segmentation. <br>
 		<b>Gongping Chen</b>, Yu Zhao, Yu Dai, Jianxun Zhang, Xiaotao Yin, Liang Cui, Jiang Qian. <br>
-		<em>Expert Systems With Applications (<b>ESWA</b>)</em>, 2022.
+		<em>Expert Systems With Applications (<b>ESWA</b>)</em>, 2023.
 		<p>[<a href="https://doi.org/10.1016/j.eswa.2022.118847">paper</a>][<a href="https://github.com/CGPxy/Asymmetric-U-net-for-ultrasound-segmentation">code</a>]
 		</td>
 	</tr>
