--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@ ga('send', 'pageview');
 				</p>
 			</td>
 			<td width="200", align="left">
-				<img src="./pic/CGP.jpg" border="0" width="120"><br>
+				<img src="./pic/cgp1.jpg" border="0" width="120"><br>
 			</td>
 		</tr>
 	</tbody>
@@ -89,10 +89,13 @@ ga('send', 'pageview');
 	I am currently a second year Ph.D. student in the 
 	<a href="https://ai.nankai.edu.cn/index.htm">College of Artificial Intelligence</a>, 
 	<a href="https://www.nankai.edu.cn/">Nankai University</a>, 
-	supervised by <a href="https://ai.nankai.edu.cn/info/1033/4187.htm">Prof. Yu Dai</a> and <a href="https://ai.nankai.edu.cn/info/1033/2787.htm">Prof. Jianxun Zhang</a>.
-	Previously, I received the Master's degree from <a href="http://cs.xhu.edu.cn/">School of Computer and Software Engineering</a>, <a href="http://www.xhu.edu.cn/">Xihua University</a> in 2020, under the supervison from <a href="http://202.115.144.153/jsj/gzs/list.psp">Prof. Zhisheng Gao</a>.
+	supervised by Prof. Yu Dai</a> and Prof. Jianxun Zhang</a>.
+	Previously, I received the Master's degree from <a href="http://cs.xhu.edu.cn/">School of Computer and Software Engineering</a>, <a href="http://www.xhu.edu.cn/">Xihua University</a> in 2020, under the supervison from Prof. Zhisheng Gao</a>.
 </p>
-
+<!-- <a href="https://ai.nankai.edu.cn/info/1033/4187.htm">
+<a href="https://ai.nankai.edu.cn/info/1033/2787.htm">
+<a href="http://202.115.144.153/jsj/gzs/list.psp">	 -->
+	
 <!-- <p>My research interest lies in medical image analysis and deep learning, for improving the public healthcare & medical diagnosis with machine intelligence. Recently, I am exploring model generalization and robustness for wide applicability of AI models in complex clinical environments. </p> -->
 <p>My research interest include medical images analysis and deep learning, especially ultrasound image segmentation.</p>
 	
