--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@ ga('send', 'pageview');
 		<td> SDFNet: Automatic segmentation of kidney ultrasound images using multi-scale low-level structural feature. <br>
 		<b>Gongping Chen</b>, Rui Li, Yu Zhao, Yu Dai, Jianxun Zhang, Xiaotao Yin, Liang Cui. <br>
 		<em>Expert Systems With Applications (<b>ESWA</b>)</em>, 2021.
-		<p>[<a href="http://dx.doi.org/10.1016/j.eswa.2021.115619">paper</a>]
+		<p>[<a href="http://dx.doi.org/10.1016/j.eswa.2021.115619">paper</a>] [<a href="https://github.com/CGPxy/SDFNet">code</a>]
 		</td>
 	</tr>
 	<tr>&nbsp</tr>
