--- a/index.html
+++ b/index.html
@@ -298,23 +298,14 @@ ga('send', 'pageview');
 </ul>
 
 
-<!-- <h2>Teaching</h2>
+<h2>Public Learning Resources</h2>
 <table id="tbTeaching" border="0" width="100%">
 	<tbody>
 		<tr>
-			<td> 2019-2020</td><td>Spring</td><td>Principles of Programming Languages (CSCI 3180)</td>
-		</tr>
-		<tr>
-			<td> 2019-2020</td><td>Fall</td><td>Problem Solving by Programming (ENGG 1110)</td>
-		</tr>
-		<tr>
-			<td> 2018-2019</td><td>Spring</td><td>Problem Solving by Programming (ENGG 1110)</td>
-		</tr>
-		<tr>
-			<td> 2018-2019</td><td>Fall</td><td>Digital Logic and Systems (ENGG 2020).</td>
+			<a href="http://miai.ha.edu.cn/resource8.php">郑州大学医学影像与人工智能</a>
 		</tr>
 	</tbody>
-</table> -->
+</table>
 
 <!--
 <h2>Experience</h2>
