--- a/index.html
+++ b/index.html
@@ -112,25 +112,11 @@ ga('send', 'pageview');
 	<tbody>
 	<tr>
 		<td width="270">
-		<img src="./papers/NU-net.png" width="250px" height="90px" style="box-shadow: 4px 4px 8px #888" class="center">
-		</td>		
-		<td> NU-net: An Unpretentious Nested U-net for Breast Tumor Segmentation. <br>
-		<b>Gongping Chen</b>, Lei Li, Yu Dai, Jianxun Zhang. <br>
-		<em>arXiv (<b>arXiv</b>)</em>, 2022.
-		<p>[<a href="https://doi.org/10.48550/arXiv.2209.07193">paper</a>][<a href="https://github.com/CGPxy/NU-net">code</a>]
-		</td>
-	</tr>
-	<tr>&nbsp</tr>
-    <tr>&nbsp</tr>
-    <tr>&nbsp</tr>
-
-	<tr>
-		<td width="270">
 		<img src="./papers/ESKNet.png" width="250px" height="90px" style="box-shadow: 4px 4px 8px #888" class="center">
 		</td>		
 		<td> ESKNet： An enhanced adaptive selection kernel convolution for breast tumors segmentation. <br>
 		<b>Gongping Chen</b>, Jianxun Zhang, Yu Dai. <br>
-		<em>arXiv (<b>arXiv</b>)</em>, 2022.
+		<em>arXiv (<b>arXiv</b>)</em>, 2023.
 		<p>[<a href="https://doi.org/10.48550/arXiv.2211.02915">paper</a>][<a href="https://github.com/CGPxy/ESKNet">code</a>]
 		</td>
 	</tr>
@@ -144,14 +130,27 @@ ga('send', 'pageview');
 		</td>		
 		<td> AAU-net: An Adaptive Attention U-net for Breast Lesions Segmentation in Ultrasound Images. <br>
 		<b>Gongping Chen</b>, Yuming Liu, Lei Li, Moi Hoon Yap, Yu Dai, Jianxun Zhang. <br>
-		<em>arXiv (<b>arXiv</b>)</em>, 2022.
-		<p>[<a href="https://doi.org/10.48550/arXiv.2204.12077">paper</a>][<a href="https://github.com/CGPxy/AAU-net">code</a>]
+		<em>arXiv (<b>arXiv</b>)</em>, 2023.
+		<p>[<a href="https://doi.org/10.1109/TMI.2022.3226268">paper</a>][<a href="https://github.com/CGPxy/AAU-net">code</a>]
 		</td>
 	</tr>
 	<tr>&nbsp</tr>
     <tr>&nbsp</tr>
     <tr>&nbsp</tr>
-
+		
+    	<tr>
+		<td width="270">
+		<img src="./papers/NU-net.png" width="250px" height="90px" style="box-shadow: 4px 4px 8px #888" class="center">
+		</td>		
+		<td> NU-net: Rethinking th e unpretentiou s U -ne t fo r medica l ultrasound imag e segmentation.  <br>
+		<b>Gongping Chen</b>, Lei Li, Yu Dai, Jianxun Zhang. <br>
+		<em>arXiv (<b>arXiv</b>)</em>, 2023.
+		<p>[<a href="https://doi.org/10.1016/j.patcog.2023.109728">paper</a>][<a href="https://github.com/CGPxy/NU-net">code</a>]
+		</td>
+	</tr>
+	<tr>&nbsp</tr>
+    <tr>&nbsp</tr>
+    <tr>&nbsp</tr>
 
 	<tr>
 		<td width="270">
