--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@ ga('send', 'pageview');
 		</td>		
 		<td> AAU-net: An Adaptive Attention U-net for Breast Lesions Segmentation in Ultrasound Images. <br>
 		<b>Gongping Chen</b>, Yuming Liu, Lei Li, Moi Hoon Yap, Yu Dai, Jianxun Zhang. <br>
-		<em>arXiv (<b>arXiv</b>)</em>, 2023.
+		<em>IEEE Transactions on Medical Imaging (<b>TMI</b>)</em>, 2023.
 		<p>[<a href="https://doi.org/10.1109/TMI.2022.3226268">paper</a>][<a href="https://github.com/CGPxy/AAU-net">code</a>]
 		</td>
 	</tr>
@@ -144,7 +144,7 @@ ga('send', 'pageview');
 		</td>		
 		<td> NU-net: Rethinking th e unpretentiou s U -ne t fo r medica l ultrasound imag e segmentation.  <br>
 		<b>Gongping Chen</b>, Lei Li, Yu Dai, Jianxun Zhang. <br>
-		<em>arXiv (<b>arXiv</b>)</em>, 2023.
+		<em>Pattern Recognition (<b>PR</b>)</em>, 2023.
 		<p>[<a href="https://doi.org/10.1016/j.patcog.2023.109728">paper</a>][<a href="https://github.com/CGPxy/NU-net">code</a>]
 		</td>
 	</tr>
