--- a/index.html
+++ b/index.html
@@ -276,16 +276,17 @@ ga('send', 'pageview');
 
 <h2>Professional Activities</h2>
 <ul>
-<!-- 	<li>	
+	<li>	
 	<b>Conference Reviews:</b><br>
-	IEEE Conference on Computer Vision and Pattern Recognition (CVPR) 2021<br>
-	AAAI Conference on Artificial Intelligence (AAAI) 2021<br>
-	International Conference on Medical Image Computing and Computer-Assisted Intervention (MICCAI) 2020 <br>
-	IEEE Winter Conference on Applications of Computer Vision (WACV) 2020 <br>
-	</li> -->
+	International Conference on Medical Image Computing and Computer-Assisted Intervention (MICCAI) 2023 <br>
+	</li>
 	<li>	
 	<b>Journal Reviews:</b><br>
+	IEEE Transaction on cybernetic (TCYBS) <br>
+	IEEE Transaction on medical imaging (TMI) <br>
+	Information fusion （INFS） <br>
 	IEEE Journal of Biomedical and Health Informatics (JBHI)<br>
+	Expert systems with application （ESWA） <br>
 	Knowledge-Based Systems (KBS) <br>
 	Computer Methods and Programs in Biomedicine (CMPB) <br>
 	Computers in Biology and Medicine (CBIM) <br>
