--- a/index.html
+++ b/index.html
@@ -279,20 +279,21 @@ ga('send', 'pageview');
 	<li>	
 	<b>Conference Reviews:</b><br>
 	International Conference on Medical Image Computing and Computer-Assisted Intervention (MICCAI) 2023 <br>
+	The 6th Chinese Conference on Pattern Recognition and Computer Vision (PRCV2023)
 	</li>
 	<li>	
 	<b>Journal Reviews:</b><br>
-	IEEE Transaction on cybernetic (TCYBS) <br>
-	IEEE Transaction on medical imaging (TMI) <br>
-	Information fusion （INFS） <br>
+	IEEE Transaction on Cybernetic (TCYBS) <br>
+	IEEE Transaction on Medical Imaging (TMI) <br>
+	Information Fusion （INFFUS） <br>
 	IEEE Journal of Biomedical and Health Informatics (JBHI)<br>
-	Expert systems with application （ESWA） <br>
+	Expert Systems with Application （ESWA） <br>
 	Knowledge-Based Systems (KBS) <br>
 	Computer Methods and Programs in Biomedicine (CMPB) <br>
 	Computers in Biology and Medicine (CBIM) <br>
 	Applied Intelligence (APIN) <br>
 	IEEE Access <br>
-	Scientific Reports  <br>
+	.....  <br>
 	<p style="margin-top:3px"></p>		
 	</li>
 </ul>
