--- a/index.html
+++ b/index.html
@@ -154,12 +154,12 @@ ga('send', 'pageview');
 		
     	<tr>
 		<td width="270">
-		<img src="./papers/RRCnet.png" width="250px" height="90px" style="box-shadow: 4px 4px 8px #888" class="center">
+		<img src="./papers/RRCNet1.png" width="250px" height="90px" style="box-shadow: 4px 4px 8px #888" class="center">
 		</td>		
-		<td> NU-net: Rethinking th e unpretentiou s U -ne t fo r medica l ultrasound imag e segmentation.  <br>
-		<b>Gongping Chen</b>, Lei Li, Yu Dai, Jianxun Zhang. <br>
-		<em>Pattern Recognition (<b>PR</b>)</em>, 2023.
-		<p>[<a href="https://doi.org/10.1016/j.patcog.2023.109728">paper</a>][<a href="https://github.com/CGPxy/NU-net">code</a>]
+		<td> RRCNet: Refinement residual convolutional network for breast ultrasound images segmentation.  <br>
+		<b>Gongping Chen</b>, Yu Dai, Jianxun Zhang. <br>
+		<em>Engineering Applications of Artificial Intelligence (<b>EAAI</b>)</em>, 2023.
+		<p>[<a href="https://doi.org/10.1016/j.engappai.2022.105601">paper</a>][<a href="https://github.com/CGPxy/NU-net">code</a>]
 		</td>
 	</tr>
 	<tr>&nbsp</tr>
