--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@ ga('send', 'pageview');
 		<td> RRCNet: Refinement residual convolutional network for breast ultrasound images segmentation.  <br>
 		<b>Gongping Chen</b>, Yu Dai, Jianxun Zhang. <br>
 		<em>Engineering Applications of Artificial Intelligence (<b>EAAI</b>)</em>, 2023.
-		<p>[<a href="https://doi.org/10.1016/j.engappai.2022.105601">paper</a>][<a href="https://github.com/CGPxy/NU-net">code</a>]
+		<p>[<a href="https://doi.org/10.1016/j.engappai.2022.105601">paper</a>][<a href="https://github.com/CGPxy/RRCNet">code</a>]
 		</td>
 	</tr>
 	<tr>&nbsp</tr>
