--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@ ga('send', 'pageview');
 	<a href="https://ai.nankai.edu.cn/index.htm">College of Artificial Intelligence</a>, 
 	<a href="https://www.nankai.edu.cn/">Nankai University</a>, 
 	supervised by Prof. Yu Dai</a> and Prof. Jianxun Zhang</a>.
-	Previously, I received the Master's degree from <a href="http://cs.xhu.edu.cn/">School of Computer and Software Engineering</a>, <a href="http://www.xhu.edu.cn/">Xihua University</a> in 2020, under the supervison from Prof. Zhisheng Gao</a>.
+<!-- 	Previously, I received the Master's degree from <a href="http://cs.xhu.edu.cn/">School of Computer and Software Engineering</a>, <a href="http://www.xhu.edu.cn/">Xihua University</a> in 2020, under the supervison from Prof. Zhisheng Gao</a>. -->
 </p>
 <!-- <a href="https://ai.nankai.edu.cn/info/1033/4187.htm">
 <a href="https://ai.nankai.edu.cn/info/1033/2787.htm">
@@ -304,6 +304,7 @@ ga('send', 'pageview');
 	IEEE Journal of Biomedical and Health Informatics (JBHI)<br>
 	Expert Systems with Application （ESWA） <br>
 	Knowledge-Based Systems (KBS) <br>
+	Engineering Applications of Artificial Intelligence (EAAI) <br>
 	Computer Methods and Programs in Biomedicine (CMPB) <br>
 	Computers in Biology and Medicine (CBIM) <br>
 	Applied Intelligence (APIN) <br>
