--- a/index.html
+++ b/index.html
@@ -320,7 +320,7 @@ ga('send', 'pageview');
 	<tbody>
 		<tr>
 			<li>
-			<a href="http://miai.ha.edu.cn/resource8.php">郑州大学医学影像与人工智能</a>
+			<a href="">Our publicly available medical ultrasound dataset(我们公开和收集的医学超声数据集)</a>
 			<li>
 		</tr>
 	</tbody>
