--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@ ga('send', 'pageview');
 <h2>News</h2>
 <ul>
 	<li>
-		[3/2023] Paper on medical ultrasound image segmentation was accepted by Expert Systems With Applications (<b>ESWA</b>).
+		[12/2024] Paper on medical ultrasound image segmentation was accepted by Expert Systems With Applications (<b>ESWA</b>).
 	</li>
 	<!-- <li>
 		[09/2020] Fortunate to receive <p style="color: red; display: inline;">MSRA PhD Fellowship Nomination Award</p>.
@@ -320,7 +320,7 @@ ga('send', 'pageview');
 	<tbody>
 		<tr>
 			<li>
-			<a href="">Our publicly available medical ultrasound dataset(我们公开和收集的医学超声数据集)</a>
+			<a href="https://github.com/CGPxy/Ultrasound-Dataset">Our publicly available medical ultrasound dataset(我们公开和收集的医学超声数据集)</a>
 			<li>
 		</tr>
 	</tbody>
