--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <link rel="shortcut icon" href="myIcon.ico">
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 
-<meta name="keywords" content="Gongping Chen, Gongping Chen, CSE, CUHK, The Chinese University of Hong Kong, Zhejiang University"> 
+<meta name="keywords" content="Gongping Chen, Gongping Chen, Nankai University,Tianjin Medical University"> 
 <meta name="description" content="Gongping Chen&#39;s home page">
 <meta name="google-site-verification" content="X2QFrl-bPeg9AdlMt4VKT9v6MJUSTCf-SrY3CvKt4Zs" />
 <link rel="stylesheet" href="jemdoc.css" type="text/css">
@@ -58,11 +58,11 @@ ga('send', 'pageview');
 				<h3>Ph.D Candidate</h3>
 				<p>
 					Artificial Intelligence<br>
-					College of Artificial Intelligence<br>
+					<!--College of Artificial Intelligence<br> -->
+					Tianjin Medical University
 					Nankai University<br>
 					Tianjin China<br>
 					<br>
-					<!-- Email: qdliu0226 at gmail dot com -->
 					<em>Email: <a href="mailto:cgp110@mail.nankai.edu.cn">cgp110 at mail dot nankai dote du dot cn</a></em> <br>
 					<!-- <a href="https://liuquande.github.io/QuandeLiu.pdf"><em>[Curriculum Vitae]</em></a> <br> -->
 					<!-- <br> -->
@@ -100,7 +100,7 @@ ga('send', 'pageview');
 <h2>News</h2>
 <ul>
 	<li>
-		[12/2024] Paper on medical ultrasound image segmentation was accepted by Expert Systems With Applications (<b>ESWA</b>).
+		[12/2023] Paper on medical ultrasound image segmentation was accepted by Expert Systems With Applications (<b>ESWA</b>).
 	</li>
 	<!-- <li>
 		[09/2020] Fortunate to receive <p style="color: red; display: inline;">MSRA PhD Fellowship Nomination Award</p>.
@@ -116,8 +116,8 @@ ga('send', 'pageview');
 		</td>		
 		<td> ESKNet： An enhanced adaptive selection kernel convolution for breast tumors segmentation. <br>
 		<b>Gongping Chen</b>, Jianxun Zhang, Yu Dai. <br>
-		<em>arXiv (<b>arXiv</b>)</em>, 2023.
-		<p>[<a href="https://doi.org/10.48550/arXiv.2211.02915">paper</a>][<a href="https://github.com/CGPxy/ESKNet">code</a>]
+		<em>Expert Systems With Applications (<b>ESWA</b>)</em>, 2024.
+		<p>[<a href="https://doi.org/10.1016/j.eswa.2024.123265">paper</a>][<a href="https://github.com/CGPxy/ESKNet">code</a>]
 		</td>
 	</tr>
 	<tr>&nbsp</tr>
