--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@ ga('send', 'pageview');
 				<p>
 					Artificial Intelligence<br>
 					<!--College of Artificial Intelligence<br> -->
-					Tianjin Medical University
+					Tianjin Medical University<br>
 					Nankai University<br>
 					Tianjin China<br>
 					<br>
